config/participants/unomfi/unomfi-simulator.yaml
# TODO: templatize this chart!
# for now, this is deployable as unomfi only
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unomfi-simulator
  labels:
    app: unomfi-simulator
    app.kubernetes.io/name: unomfi-simulator
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1 # exeed the replicas by 1 pod
  selector:
    matchLabels:
      app: unomfi-simulator
  template:
    metadata:
      labels:
        app: unomfi-simulator
    spec:
      volumes:
        - name: unomfi-simulator-volume
          secret:
            secretName: contrib-firebase-simulator
      containers:
        - name: unomfi-simulator
          image: mojaloop/contrib-firebase-simulator:v0.2.18
          # command: ["tail", "-f", "/dev/null"]
          livenessProbe:
            initialDelaySeconds: 10
            periodSeconds: 30
            httpGet:
              path: /app/health
              port: 8080
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 30
            httpGet:
              path: /app/health
              port: 8080
          volumeMounts:
            - name: unomfi-simulator-volume
              mountPath: "/opt/contrib-firebase-simulator/config/serviceAccountKey.json"
              subPath: serviceAccountKey.json

---
apiVersion: v1
kind: Service
metadata:
  name: unomfi-simulator
spec:
  ports:
    - port: 8080
      name: ui
  selector:
    app: unomfi-simulator
  clusterIP: None
